# L3GS

./: .gitignore  README.md
l3gos/: MANIFEST.in  README.md  pyproject.toml
l3gos/l3gos/: L3GOS_config.py  L3GOS_pipeline.py  L3GOS_trainer.py
l3gos/l3gos.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
l3gos/l3gos/data/: L3GOS_datamanager.py  L3GOS_dataparser.py  L3GOS_dataset.py
l3gos/l3gos/model/: ll_gaussian_splatting.py
l3gos/l3gos/monodepth/: litemono_network.py
l3gos/l3gos/monodepth/test/: depthtest.ipynb
l3gos/outputs/unnamed/l3gos/2023-11-27_235614/: config.yml
l3gs/: MANIFEST.in  memray-flamegraph-output_file.html  ns-train.lprof  pyproject.toml
l3gs/l3gs/: L3GS_config.py  L3GS_pipeline.py  L3GS_trainer.py  clip_test.py
l3gs/l3gs/data/: L3GS_datamanager.py  L3GS_dataset.py
l3gs/l3gs/data/utils/: feature_dataloader.py  patch_embedding_dataloader.py  pyramid_embedding_dataloader.py  pyramid_embedding_dataloader_2.py
l3gs/l3gs/encoders/: clip_encoder.py  openclip_encoder.py
l3gs/l3gs/fields/: gaussian_lerf_field.py
l3gs/l3gs/model/: ll_gaussian_splatting.py
l3gs/l3gs/monodepth/: litemono_network.py  midas_network.py  zoedepth_network.py
l3gs/l3gs/monodepth/test/: depthtest.ipynb
l3gs/outputs/bicycle/gaussian-splatting/2023-12-18_134833/: config.yml
l3gs/outputs/bicycle/gaussian-splatting/2023-12-18_134919/: config.yml
l3gs/outputs/bicyclee/gaussian-splatting/2023-12-18_134909/: config.yml
lifelong_legos/lifelong_legos/: lifelong_legos_config.py  lifelong_legos_trainer.py
outputs/unnamed/l3gos/2023-11-28_000610/: config.yml
outputs/unnamed/l3gos/2023-11-30_092342/: config.yml
outputs/unnamed/l3gos/2023-11-30_093747/: config.yml
outputs/unnamed/l3gos/2023-11-30_093937/: config.yml
outputs/unnamed/l3gos/2023-11-30_094029/: config.yml
outputs/unnamed/l3gos/2023-11-30_095422/: config.yml
outputs/unnamed/l3gos/2023-11-30_095817/: config.yml
outputs/unnamed/l3gos/2023-11-30_095851/: config.yml
outputs/unnamed/l3gos/2023-11-30_095913/: config.yml
outputs/unnamed/l3gos/2023-11-30_095943/: config.yml
outputs/unnamed/l3gos/2023-11-30_100044/: config.yml
outputs/unnamed/l3gos/2023-11-30_101042/: config.yml
outputs/unnamed/l3gos/2023-11-30_141006/: config.yml
outputs/unnamed/l3gos/2023-11-30_141118/: config.yml
outputs/unnamed/l3gos/2023-11-30_142127/: config.yml
outputs/unnamed/l3gos/2023-11-30_142232/: config.yml
outputs/unnamed/l3gos/2023-11-30_142337/: config.yml
(+24 files in other folders)
