
[project]
name = "l3gos"
version = "0.1.1"

dependencies=[
    "nerfstudio@git+https://github.com/nerfstudio-project/nerfstudio@9e33b437dff6df5a9579c04b1eba46640df88a96",
    "gsplat@git+https://github.com/nerfstudio-project/gsplat.git"
]

[tool.setuptools.packages.find]
include = ["l3gos*"]

[project.entry-points.'nerfstudio.method_configs']
l3gos = 'l3gos.L3GOS_config:l3gos_method'
