
[project]
name = "l3gos"
version = "0.1.1"
requires-python = ">=3.8"

dependencies=[
    "nerfstudio@git+https://github.com/nerfstudio-project/nerfstudio@f483a6b8e86020adfebb971be6d3935cb45d7870",
    "gsplat@git+https://github.com/nerfstudio-project/gsplat.git",
    "Pillow >=9.3.0, <10.0.0"
]
[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["l3gos*"]

[project.entry-points.'nerfstudio.method_configs']
l3gos = 'l3gos.L3GOS_config:l3gos_method'
